Remove the protection domain map in RunnerClassLoader
    Based on: https://github.com/quarkusio/quarkus/pull/13503#discussion_r531573829